# Global-Quarterly-Macro-Variables

./: .pre-commit-config.yaml  CHANGES.md  CITATION  Quarterly Macroeconomic Variables.xlsx  README.md  environment.yml  output_data.xlsx  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
Marketing_Documents/: Quarterly Macroeconomic Variables.xlsx
paper/: global_macro_variables.tex  global_macro_variables_pres.tex  task_paper.py
src/global_macro_variables/: __init__.py  clean_data.py  config.py  import_data.py  sanbox_scraping.ipynb  sandbox.ipynb  sandbox_merging.ipynb  sandbox_output_data.ipynb  scrape_ratings.py  task_clean_data.py  task_import_data.py  task_scrape_ratings.py
src/global_macro_variables/analysis/: task_analysis.py
src/global_macro_variables/data_management/: __init__.py  task_data_management.py
src/global_macro_variables/final/: __init__.py  task_final.py
